@@ -4,7 +4,9 @@ Revision history for SPVM
         [BUGS]
         * new_c, new_c99, new_cpp, new_cpp11 of SPVM::Builder::Config pass
           arguments to new of SPVM::Builder::Config.
-        * Add file, file_optional, native_include_dir, native_src_dir fields to SPVM::Builder::Config.
+        * Add file, file_optional, native_include_dir,
+          native_src_dir native_lib_dir, native_bin_dir
+          fields to SPVM::Builder::Config.
         * Need file field new, new_c, new_c99, new_cpp, new_cpp11 of SPVM::Builder::Config
           [Now Runtime Exception 
           my $config = SPVM::Config->new;
